--- a/templates/account.html
+++ b/templates/account.html
@@ -26,7 +26,7 @@
 			<td>{{ user.id }}</td>
 		</tr>
 		<tr>
-			<td>账户口令</td>
+			<td>随机串码</td>
 			<td>{{ user.active_code }}</td>
 		</tr>
 		<tr>
