--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 {% block content %}
 	<div class="container">
 	{% for message in get_flashed_messages() %}
-		<div class="alert alert-warning">
+		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 			{{ message }}
 		</div>
