--- a/templates/form.html
+++ b/templates/form.html
@@ -23,7 +23,8 @@
 <p>
 	
 </p>
-<table class="table table-bordered table-striped">
+<div class="table-responsive">
+<table class="table table-bordered table-striped table-condensed">
 	<thead>
 		<th>学生学号</th>
 		<th>学生姓名</th>
@@ -46,5 +47,6 @@
 	{% endfor %}
 	</tbody>	
 </table>
+</div>
 {% endif %}
 {% endblock %}
