--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 		        <li><a href="/u/{{ user.id }}/account">账户信息</a></li>
+		        <li><a href="/download/flasky.apk">下载app</a></li>
 		        <li><a href="/logout">退出</a></li>
 		    </ul>
 		    {% else %}
@@ -34,6 +35,7 @@
 		    <ul class="nav navbar-nav navbar-right">
 		        <li><a href="/signup">注册</a></li>
 		        <li><a href="/forget">忘记密码</a></li>
+		        <li><a href="/download/flasky.apk">下载app</a></li>
 		    </ul>
 		    {% endif %}
 		</div>
